# dia-testing

./: .gitignore  CLAUDE_FAILURE_LOG.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_ROADMAP.md  test_integration.py  test_streaming.py  test_syntax.py
.claude/: settings.local.json
backend/: Dockerfile  main.py  pyproject.toml  utils.py
dia2-src/: pyproject.toml
dia2-src/dia2/: __init__.py  assets.py  engine.py  generation.py
dia2-src/dia2/audio/: __init__.py  codec.py  mimi_streaming.py
dia2-src/dia2/core/: cache.py  model.py  streaming_loader.py
dia2-src/dia2/runtime/: context.py  generator.py  script_parser.py  state_machine.py
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/routes/: +layout.ts  +page.svelte
projects/coderocket/: voice_pipeline_notes.txt  voice_pipeline_v2.txt
rust-streaming/: Cargo.toml  Dockerfile  build.sh  compare_entries_simple.py  compare_token_chains.py  tts_bridge.py
rust-streaming/src/: main.rs  session.rs  tts_bridge.rs
streaming-frontend/: index.html
streaming-frontend/css/: style.css
streaming-frontend/js/: app.js  audio-streamer.js  audio-worklet-processor.js  seamless-audio-streamer.js  webm-audio-streamer.js  websocket-client.js
