[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.6",
]
