[package]
name = "dia2-streaming-server"
version = "0.2.0"
edition = "2021"
description = "WebSocket streaming server for Dia2 TTS"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
